--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,6 @@
 /core/customers/migrations/__pycache__
 /core/stock/__pycache__
 /core/stock/migrations/__pycache__
+/core/pos/__pycache__
+/core/pos/migrations/__pycache__
 /venv
